fix button alignment

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -26,4 +26,5 @@
 
 .buttonWrap {
     display: flex;
+    position: relative;
 }
